tests/checker/diagnostics/0945_gadt_packed_branch_result_mismatch_09.ml.infer.expected
File "0945_gadt_packed_branch_result_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0945_gadt_packed_branch_result_mismatch_09 is not a valid module name.

File "0945_gadt_packed_branch_result_mismatch_09.ml", line 9, characters 31-32:
9 |   | Pack_iota (Bool_iota b) -> b
                                   ^
Error: The value b has type bool but an expression was expected of type int
